--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+:root {
+  --color: #ade45c;
+  --spacing: 10px;
+  --blur: 10px;
+}
+
+img {
+  padding: var(--spacing);
+  background: var(--color);
+  filter: blur(var(--blur));
+}
+
+.hl {
+  color: var(--color);
+}
+
 body {
   text-align: center;
   background: #193549;
